# mephisto

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  run.sh  run_mephisto.bat  run_mephisto.sh
assets/: mephisto-logo-rounded.xbm
gui/: __init__.py  editor.py  file_processor.py  main.py  menu.py  status_bar.py  ui_backend.py
include/: Instruction.hpp
include/risc/: InstructionFactory.h
include/risc/instructions/: ITypeInstruction.h  Instruction.h  Instruction.hpp  RTypeInstruction.h  RTypeInstruction.hpp
include/risc/instructions/i_type/: Addi.h  Andi.h  Ori.h  Slli.h  Slti.h  Srli.h  Xori.h
include/risc/instructions/r_type/: Add.h  And.h  Or.h  Sll.h  Slt.h  Srl.h  Sub.h  Xor.h
include/risc/memory/: Memory.h  Memory.hpp  Registers.h  Registers.hpp
include/risc/translator/: Translator.hpp
src/: Instruction.cpp  main.cpp
src/risc/instructions/: RTypeInstruction.cpp
src/risc/memory/: Memory.cpp  Registers.cpp
